// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render StoreSwitcher when there is only one available store 1`] = `null`;

exports[`does not render group name when there is only one group 1`] = `
<div
  className="root"
>
  <button
    aria-expanded={false}
    aria-label="Store 2"
    className="trigger"
    onClick={[MockFunction]}
  >
    Store 2
  </button>
  <div
    className="menu"
  >
    <div
      className="groups"
    >
      <ul
        className="groupList"
        role="listbox"
      >
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                Store 1
              </span>
            </span>
          </button>
        </li>
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                Store 2
              </span>
              <span
                className="root"
              >
                <svg
                  className="icon"
                  fill="none"
                  height={20}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="20 6 9 17 4 12"
                  />
                </svg>
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders the correct tree 1`] = `
<div
  className="root"
>
  <button
    aria-expanded={false}
    aria-label="Store 2"
    className="trigger"
    onClick={[MockFunction]}
  >
    Group 1 - Store 2
  </button>
  <div
    className="menu"
  >
    <div
      className="groups"
    >
      <ul
        className="groupList"
        role="listbox"
      >
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                undefined - Store 1
              </span>
            </span>
          </button>
        </li>
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={true}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                undefined - Store 2
              </span>
              <span
                className="root"
              >
                <svg
                  className="icon"
                  fill="none"
                  height={20}
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth="2"
                  viewBox="0 0 24 24"
                  width={20}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="20 6 9 17 4 12"
                  />
                </svg>
              </span>
            </span>
          </button>
        </li>
      </ul>
      <ul
        className="groupList"
        role="listbox"
      >
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                undefined - Store 3
              </span>
            </span>
          </button>
        </li>
        <li
          aria-selected="Store 2"
          className="menuItem"
          role="option"
        >
          <button
            className="root"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="content"
            >
              <span
                className="text"
              >
                undefined - Store 4
              </span>
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
